--- a/index.html
+++ b/index.html
@@ -230,6 +230,8 @@
 				canvas.addEventListener("touchmove" , onTouchMove,  {passive: false});
 				canvas.addEventListener("touchend"  , onTouchEnd);	
 			}
+			
+			init();
 
 			function resize(width, height)
 			{
