--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 			let canvas          = null;
 			let isMouseDown     = false;
 			let isClearON       = false;
+			let isNotInit       = true;
 
 			// マウス、タップの座標
 			let position        = [];
@@ -325,6 +326,12 @@
 
 			function onTouchStart(event)
 			{
+				if (isNotInit)
+				{
+					init();
+					isNotInit = false;
+				}
+				
 				isMouseDown = true;
 				
 				position.px = event.touches[0].pageX - event.target.getBoundingClientRect().left - getScrollPosition().x;
