--- a/index.html
+++ b/index.html
@@ -332,8 +332,11 @@
 				
 				drawUV();
 
-				event.preventDefault();
-				event.stopPropagation();
+				if (event.cancelable)
+				{
+					event.preventDefault();
+					event.stopPropagation();
+				}
 			}
 
 			function onTouchMove(event)
