--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>Gray-Scott Reaction Diffusion System</title>
 		
 		<link rel="stylesheet" href="./js/jquery-ui.css">
+		<link rel="shortcut icon" href="">
 		<script src="./js/jquery-1.12.4.js"></script>
 		<script src="./js/jquery-ui.js"></script>
 		<script src="./js/jquery.ui.touch-punch.min.js"></script>
