--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
 						mUniforms.brush.value = new THREE.Vector2(ux, uy);
 					}
 				}
-				//console.log("UNKO: initDrawUV");
+				//console.log("initDrawUV");
 			}
 
 			function drawUV()
