--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
 			function init()
 			{
-				console.log("2022-07-19 10:21");
+				console.log("2022-07-19 10:30");
 				
 				canvas = document.getElementById("myCanvas");
 				
@@ -603,9 +603,9 @@
 		
 		<style>
 			#myCanvas       {width: 1024px; height: 512px;}
-			.sliderControl  {width:  300px; margin:  10px;}
-			.numText        {font-size: large; width: 100px;}
-			#paternSelector {width: 180px; height: 35px; font-size: x-large;}
+			.slider-wrapper {width: 300px; margin-right: 40px;}
+			.numText        {font-size: large; width: 80px;}
+			#paternSelector {width: 180px; height: 32px; font-size: large; vertical-align: middle;}
 		</style>
 		
 	</head>
